[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cython",
    "scipy",
    "numpy",
    "msprime",
    "cyvcf2",
    "rich_click",
    "cerberus",
    "pyyaml",
    "tqdm",
    "extension-helpers"
]
build-backend = "setuptools.build_meta"


[project]
name = "pGermlinePoly"
description = "\"Statistical method to estimate the posterior probability of germline vs. somatic mutations in clone-sequencing data.\""
keywords = ["somatic", "mutation", "cancer"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.12"
dependencies = [ "numpy", "scipy", "msprime", "Cython", "rich_click", "cyvcf2", "tqdm", "cerberus", "pyyaml"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "aabiddanda@gmail.com"}]


[project.urls]
Homepage = "https://github.com/aabiddanda/pGermlinePoly"

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "pytest-xdist"]
docs = ["sphinx", "furo", "numpydoc", "sphinx-autodoc-typehints"]

[project.scripts]
pGermlinePoly = "pGermlinePoly.cli:main"
somatic-sim = "pGermlinePoly.sim_cli:main"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "pGermlinePoly.__version__"

[tool.coverage.run]
omit = ['*/cli.py']

[tool.ruff.lint]
ignore = ['E731']
