[metadata]
name = pGermlinePoly
author = Arjun Biddanda
author_email = aabiddanda@gmail.com
description = "Statistical method to estimate the posterior probability of germline vs. somatic mutations in clone-sequencing data."
version = attr: p_germline_poly.__version__
url = https://github.com/aabiddanda/pGermlinePoly
keywords =
  somatic
  mutation
  cancer
classifiers =
  Development Status :: Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
   numpy
   scipy
   pandas
   Cython
   Click
   cyvcf2
   cerberus

[options.extras_require]
tests =
  pytest
  pytest-cov
  hypothesis
  flake8
  sphinx

[options.entry_points]
console_scripts =
    pGermlinePoly = pGermlinePoly.cli:main
